--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
   height: 95%;
   width: 100%;
   font-family: sans-serif;
-  background-image: url('http://addyosmani.com/blog/wp-content/uploads/2013/04/unicorn.jpg');
+  background: #fff;
 }
 
 .main-container {
@@ -15,7 +15,8 @@ body {
   margin: 10px auto;
   background: rgba(255, 255, 255, 0.86);
   padding: 5px;
-  border-radius: 10px;
+  border-radius: 4px;
+  box-shadow: 0 0px 5px rgba(0,0,0,.5);
 }
 
 .main-container h1 {
@@ -27,8 +28,20 @@ body {
   width: 40%;
 }
 
+
 p{
   text-align: center;
   margin: 3px 0;
   font-size: 17px;
+}
+
+.filter {
+  margin: 0px auto;
+   margin-left: 42%;
+   margin-top: 8px;
+   margin-bottom: 8px;
+  }
+
+.badge {
+  background-color: #66c3d1;
 }
