Finished up the Project

--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body {
    align-items: center;
    -webkit-justify-content: center;
    justify-content: center;
+   margin-top: 10px;
 
 }
 
@@ -63,6 +64,24 @@ body {
    margin-top: 8px;
    margin-bottom: 20px;
   }
+
+.messages-top {
+  background-color: #e1e1e1;
+  width: 100%;
+  height: 40px;
+   display: -webkit-flex;
+   display: flex;
+   -webkit-flex-direction: row /* works with row or column */
+   flex-direction: row;
+   -webkit-align-items: center;
+   align-items: center;
+   -webkit-justify-content: center;
+   justify-content: center; 
+   text-align: center;
+   font-family: 'Raleway';
+   font-weight: bolder;
+   font-size: 16px;
+}
 
 .messages-container {
   margin-top: 20px;
@@ -93,6 +112,7 @@ p{
   font-size: 15px;
   font-family: 'Raleway';
   padding-left: 10px;
+  margin: 5px;
 }
 
 .filter {
@@ -106,4 +126,35 @@ p{
   background-color: #66c3d1;
   text-align: right;
 
+}
+
+.chat-footer {
+
+  height: 40px;
+  width: 100%;
+   background-color: #989898;
+   display: -webkit-flex;
+   display: flex;
+   -webkit-flex-direction: column;
+   flex-direction: column;
+   -webkit-align-items: center;
+   align-items: center;
+   -webkit-justify-content: center;
+   justify-content: center;
+   margin: auto;
+   border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
+  box-shadow: 0 0px 5px rgba(75,75,75,.5);
+  transition: all 2s ease;
+}
+
+.chat-footer:hover {
+    height: 55px;
+    background-color: #989898;
+  }
+
+a {
+  color: #fff;
 }
